# XYZBank_autotests

./: README.md  conftest.py  pyproject.toml
config/: settings.py
pages/: base_page.py  locators.py  manager_page.py
runner/: dockerfile
tests/: test_add_customer.py  test_delete_customer.py  test_sort_customers.py
utils/: data_generator.py
